force-app/main/default/objects/Google_Drive_Sync_Configuration__c/Google_Drive_Sync_Configuration__c.object-meta.xml
<CustomObject>
    <label>Google Drive Sync Configuration</label>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Drive Sync Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>