force-app/main/default/objects/Google_Drive_Sync_Configuration__c/fields/Active_templates__c.field-meta.xml
<CustomField>
    <fullName>Active_templates__c</fullName>
    <label>Ass active templates</label>
    <summaryFilterItems>
        <field>Google_Drive_Folder_Template__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Google_Drive_Folder_Template__c.Google_Drive_Sync_Configuration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>