force-app/main/default/objects/Google_Drive_Sync_Configuration__c/fields/Delete_files_attachments__c.field-meta.xml
<CustomField>
    <fullName>Delete_files_attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, once files attached to the record are copied to Google drive, they will be deleted from SF.</description>
    <label>Delete Files in SF after file sync</label>
    <type>Checkbox</type>
</CustomField>