force-app/main/default/objects/Google_Drive_Sync_Configuration__c/fields/Folder_Name_for_Files__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name_for_Files__c</fullName>
    <description>Folder will be created with this name for storing files in Google Drive</description>
    <label>Folder Name for Files</label>
    <length>255</length>
    <type>Text</type>
</CustomField>