force-app/main/default/objects/Google_Drive_Sync_Configuration__c/fields/Parent_Folder_Google_Drive_Ref__c.field-meta.xml
<CustomField>
    <fullName>Parent_Folder_Google_Drive_Ref__c</fullName>
    <formula>$CustomMetadata.Google_Drive_Integration_Configurations__mdt.Dev_Sandbox.Parent_Folder_GD_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Folder Google Drive Ref</label>
    <type>Text</type>
</CustomField>