force-app/main/default/objects/Google_Drive_Sync_Configuration__c/fields/Upload_files_attachments__c.field-meta.xml
<CustomField>
    <fullName>Upload_files_attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, files attached to the record, will be copied to Google drive.</description>
    <label>Files sync</label>
    <type>Checkbox</type>
</CustomField>