force-app/main/default/objects/Google_Drive_Sync_Configuration__c/validationRules/Folder_name_is_mandatory_for_Upload.validationRule-meta.xml
<ValidationRule>
    <fullName>Folder_name_is_mandatory_for_Upload</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Upload_files_attachments__c ,ISBLANK( Folder_Name_for_Files__c ), false)</errorConditionFormula>
    <errorDisplayField>Folder_Name_for_Files__c</errorDisplayField>
    <errorMessage>Folder Name is mandatory for upload</errorMessage>
</ValidationRule>